// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckBox /> should match the snapshot for a checked check 1`] = `
<div
  class="base 3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base base appearance cursorPointer button"
>
  <input
    checked=""
    class="base block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute base appearance cursorPointer button nativeInput_default nativeInput_checked"
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="base display_flex position_relative center_mobile_base center_mobile_base checkable_base base appearance cursorPointer button"
  >
    <i
      class="base display_block small_mobile_base icon_base root_base colours_white_base position_absolute"
      role="presentation"
    >
      <svg
        class="base display_block width_full height_full"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 7L9 19l-5.5-5.5 1.414-1.414L9 16.172 19.586 5.586 21 7z"
        />
      </svg>
    </i>
    <div
      class="base border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base backgroundColours_green600_base checkableItem_base base_default_base base_selected_base"
    />
  </div>
  <label
    class="base width_full base appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
  >
    <span
      class="base textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      check label 1
    </span>
  </label>
</div>
`;

exports[`<CheckBox /> should match the snapshot for a disable checkbox 1`] = `
<div
  class="base 3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base base appearance cursorPointer button disabled"
>
  <input
    class="base block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute pointerEvents_none base appearance cursorPointer button nativeInput_default"
    disabled=""
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="base display_flex position_relative center_mobile_base center_mobile_base checkable_base base appearance cursorPointer button"
  >
    <div
      class="base border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base backgroundColours_transparent_base checkableItem_base base_default_base"
    />
  </div>
  <label
    class="base width_full pointerEvents_none base appearance cursorPointer button root_base colours_neutral_base sizes_4_base label_disabled_base"
  >
    <span
      class="base textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      check label 1
    </span>
  </label>
</div>
`;

exports[`<CheckBox /> should match the snapshot for a single check 1`] = `
<div
  class="base 3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base base appearance cursorPointer button"
>
  <input
    class="base block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute base appearance cursorPointer button nativeInput_default"
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="base display_flex position_relative center_mobile_base center_mobile_base checkable_base base appearance cursorPointer button"
  >
    <div
      class="base border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base backgroundColours_transparent_base checkableItem_base base_default_base"
    />
  </div>
  <label
    class="base width_full base appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
  >
    <span
      class="base textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      check label 1
    </span>
  </label>
</div>
`;

exports[`<CheckBox /> should match the snapshot for a single check with no value or label 1`] = `
<div
  class="base 3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base base appearance cursorPointer button"
>
  <input
    class="base block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute base appearance cursorPointer button nativeInput_default"
    name=""
    type="checkbox"
    value=""
  />
  <div
    class="base display_flex position_relative center_mobile_base center_mobile_base checkable_base base appearance cursorPointer button"
  >
    <div
      class="base border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base backgroundColours_transparent_base checkableItem_base base_default_base"
    />
  </div>
  <label
    class="base width_full base appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
  >
    <span
      class="base textAlign_left root_base colours_neutral_base fontWeight_normal_base sizes_4_base"
    />
  </label>
</div>
`;

exports[`<CheckBox /> when with component child should match the snapshot 1`] = `
<div
  class="base 3_mobile_base 3_mobile_base 3_mobile_base none_mobile_base display_flex position_relative center_mobile_base row_mobile_base flexStart_mobile_base root_base base appearance cursorPointer button"
>
  <input
    class="base block appearance input none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full height_full position_absolute base appearance cursorPointer button nativeInput_default"
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="base display_flex position_relative center_mobile_base center_mobile_base checkable_base base appearance cursorPointer button"
  >
    <div
      class="base border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 2_mobile_base 2_mobile_base 2_mobile_base 2_mobile_base backgroundColours_transparent_base checkableItem_base base_default_base"
    />
  </div>
  <label
    class="base width_full base appearance cursorPointer button root_base colours_neutral_base sizes_4_base"
  >
    <h1
      class="base root_base colours_dark_base fontWeight_bold_base sizes_8_base"
    >
      Hello checkbox
    </h1>
  </label>
</div>
`;
